tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Valid/FooData.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Valid;

class FooData {}
